DTMF tonechange event sometimes doesn't fire https://bugs.webkit.org/show_bug.cgi?id=242187 rdar://problem/96593903

Reviewed by Eric Carlson.

Make sure that DTMF sender does not get GCed until it sent all tones or is stopped.

* LayoutTests/webrtc/dtmf-gc-expected.txt: Added.
* LayoutTests/webrtc/dtmf-gc.html: Added.
* Source/WebCore/Modules/mediastream/RTCDTMFSender.cpp:
* Source/WebCore/Modules/mediastream/RTCDTMFSender.h:

Canonical link: https://commits.webkit.org/253551@main